small visual improvements

--- a/checker.html
+++ b/checker.html
@@ -31,12 +31,11 @@
                     <label for="identityNumber">identity number</label>
                     <input type="text" id="identityNumber" placeholder="120345-678A" required>
                     <br />
-                    <input type="submit" value="Check">
+                    <button type="submit">Check</button>
                 </form>
                 <div id="output">
             </div>
         </div>
-        <!--5-->
     </div>
 </body>
 
