--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							checked
 							class="inputTab"
 						/><label for="female">Female</label>
-						<!-- returns "true" -->
+						<!-- returns true -->
 						<input
 							type="radio"
 							value=""
@@ -62,7 +62,7 @@
 							class="inputTab"
 						/>
 						<br />
-						<input type="submit" value="Generate" />
+						<button type="submit">Generate</button>
 					</form>
 					<p id="output"></p>
 				</div>
