added optional individual number for generator

--- a/index.html
+++ b/index.html
@@ -53,12 +53,22 @@
 						<label for="male">Male</label>
 						<!-- returns "" which is falsly -->
 						<br />
+						<label for="individualNumber">Individual Number</label>
+						<input
+							type="number"
+							min="002"
+							max="899"
+							id="individualNumber"
+							name="individualNumber"
+							value="false"
+						/>
+						<br />
 						<label for="expat">Expat</label>
 						<input
 							type="checkbox"
 							value="true"
 							id="isExpat"
-							id="expat"
+							name="expat"
 							class="inputTab"
 						/>
 						<br />
