--- a/checker.html
+++ b/checker.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="checker.js"></script>
-    <title>GrandIdentity</title>
-    <link rel="stylesheet" href="/style.css">
-
-</head>
-<body>
-    <div class="grid-container">
-        <div class="grid-item item1"></div>
-        <div class="grid-item item2">
-            <div id="headerBackground">
-                <!-- prettier-ignore -->
-                <pre id="headerText">Grand
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="checker.js"></script>
+		<title>GrandIdentity</title>
+		<link rel="stylesheet" href="/style.css" />
+	</head>
+	<body>
+		<div class="grid-container">
+			<div class="grid-item item1"></div>
+			<div class="grid-item item2">
+				<div id="headerBackground">
+					<!-- prettier-ignore -->
+					<pre id="headerText">Grand
     Identity</pre>
-            </div>
-        </div>
-        <div class="grid-item item3">
+				</div>
+			</div>
+			<div class="grid-item item3">
 				<nav>
-                    <a href="/index.html">Generator</a>
+					<a href="/index.html">Generator</a>
 					<h2>Checker</h2>
 				</nav>
-        </div>
-        <div class="grid-item item4">
-            <div id="checkerContainer">
-                <form id="generatorForm">
-                    <label for="identityNumber">identity number</label>
-                    <input type="text" id="identityNumber" placeholder="120345-678A" required>
-                    <br />
-                    <button type="submit">Check</button>
-                </form>
-                <div id="output">
-            </div>
-        </div>
-    </div>
-</body>
-
+			</div>
+			<div class="grid-item item4">
+				<div id="checkerContainer">
+					<form id="generatorForm">
+						<label for="identityNumber">identity number</label>
+						<input
+							type="text"
+							id="identityNumber"
+							placeholder="120345-678A"
+							required
+						/>
+						<br />
+						<button type="submit">Check</button>
+					</form>
+					<div id="output"></div>
+				</div>
+			</div>
+		</div>
+		<script>
+			//lazy loading a larger image
+			document.addEventListener("DOMContentLoaded", () => {
+				const background = new Image()
+				background.src = "/images/people_walking_background.png"
+				background.onload = () => {
+					const body = document.getElementsByTagName("body")[0]
+					body.style.backgroundImage = `url(${background.src})`
+				}
+			})
+		</script>
+	</body>
 </html>
