--- a/checker.html
+++ b/checker.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="checker.js"></script>
 		<title>GrandIdentity</title>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div class="grid-container">
@@ -19,7 +19,7 @@
 			</div>
 			<div class="grid-item item3">
 				<nav>
-					<a href="/index.html">Generator</a>
+					<a href="index.html">Generator</a>
 					<h2>Checker</h2>
 				</nav>
 			</div>
@@ -44,7 +44,7 @@
 			//lazy loading a larger image
 			document.addEventListener("DOMContentLoaded", () => {
 				const background = new Image()
-				background.src = "/images/people_walking_background.png"
+				background.src = "images/people_walking_background.png"
 				background.onload = () => {
 					const body = document.getElementsByTagName("body")[0]
 					body.style.backgroundImage = `url(${background.src})`
