fixed value of individual number in index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							max="899"
 							id="individualNumber"
 							name="individualNumber"
-							value="false"
+							value=""
 						/>
 						<br />
 						<label for="expat">Expat</label>
