fixed logical issue with separator, simplified code

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<label for="maxDate">Maximum Date</label>
 						<input type="date" id="maxDate" value="2022-12-11" required />
 						<br />
-						<label for="isFemale">Gender</label>
+						<label for="female">Gender</label>
 						<input
 							type="radio"
 							value="true"
@@ -41,7 +41,7 @@
 							id="female"
 							checked
 							class="inputTab"
-						/><label for="female">Female</label>
+						/><label for="male">Female</label>
 						<!-- returns true -->
 						<input
 							type="radio"
@@ -60,10 +60,10 @@
 							max="899"
 							id="individualNumber"
 							name="individualNumber"
-							value="false"
+							value=""
 						/>
 						<br />
-						<label for="expat">Expat</label>
+						<label for="isExpat">Expat</label>
 						<input
 							type="checkbox"
 							value="true"
